# n9kv-kvm

./: .flake8  .gitignore  CLAUDE.md  ER_simple.sh  README.md  ansible_ER_interface_mac_addresses.yaml  ansible_L1_interface_mac_addresses.yaml  ansible_S1_interface_mac_addresses.yaml  ansible_S2_interface_mac_addresses.yaml  ansible_policy_interface_mac_addresses.yaml  bridges_config.sh  bridges_create.sh  bridges_down.sh  bridges_monitor.sh  dynamic_inventory.py  env  env_base.sh  interface_mac_addresses_ER.yaml  interface_mac_addresses_L1.yaml  interface_mac_addresses_S2.yaml  isl_bridges_up.sh  n9kv_install.sh  n9kv_install_ER.sh  n9kv_install_L1.sh  n9kv_install_S1.sh  n9kv_install_S2.sh  n9kv_install_all.sh  n9kv_install_bios.sh  n9kv_install_bios_ER.sh  n9kv_install_bridge.sh  n9kv_install_bridge_scsi.sh  n9kv_install_bridge_scsi_ER.sh  n9kv_install_tap.sh  n9kv_qemu_ER.sh  n9kv_qemu_L1.sh  n9kv_qemu_S1.sh  n9kv_qemu_S2.sh  n9kv_qemu_prod_ER.sh  n9kv_virt_S1.sh  n9kv_virt_install_bios_ALL.sh  (+8 more)
ansible/: interface_mac_addresses_S1.yaml
cockpit/: README.md
docs/: bridges.md  chrony.md  clone_prepare_repo.md  dnsmasq.md  install_ansible_collection.md  install_libvirt_lxc_driver.md  manual_vpc_bringup_s1.md  n9kv_bringup.md  n9kv_fix_interface_mac_addresses.md  nd3_add_switches.md  nd3_bringup_web.md  nd3_fabrics_bringup.md  nd4_add_switches.md  nd4_bringup_web.md  nd4_fabrics_bringup.md  nd_add_switches.md  nd_bringup_cli.md  nd_create_fabrics.md  nd_installation.md  ndfc_bringup_web.md  topology.mmd
env/: 01-venv.sh  02-ansible.sh  03-libvirt.sh  04-python.sh  (+4 more)
(+287 files in other folders)
