[project]
name = "n9kv-kvm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=11.8.0",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pylint>=3.3.8",
    "pymarkdownlnt>=0.9.37",
    "pynetbox>=7.8.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "types-pyyaml>=6.0.12.20250809",
]

[tool.black]
line-length = 169

[tool.flake8]
max-line-length = 169

[tool.pylint.format]
max-line-length = 169

[tool.pymarkdown]
plugins.md013.line_length = 169
plugins.md013.code_block_line_length = 169
plugins.md013.heading_line_length = 169
